init file reading

--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
+    <title>Music Lord for Timur blyat'!!</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900&display=swap&subset=cyrillic"
+      rel="stylesheet"
+    />
     <script>
       (function() {
         if (!process.env.HOT) {
